--- a/src/pages/team.css
+++ b/src/pages/team.css
@@ -2,5 +2,6 @@
 {
     display : flex;
     flex-direction: column;
-    background-color: black;
+    background-color: #010606;
+    padding-bottom: 200px;
 }
